@@ -48,6 +48,8 @@
 void cfs_schedule_timeout(cfs_task_state_t state, int64_t timeout);
 void cfs_schedule(void);
 void cfs_pause(cfs_duration_t ticks);
+int  cfs_need_resched(void);
+void cfs_cond_resched(void);
 
 /*
  * Wait Queues
