@@ -741,6 +741,15 @@ errorout:
     return NT_SUCCESS(status);
 }
 
+int cfs_need_resched(void)
+{
+        return 0;
+}
+
+void cfs_cond_resched(void)
+{
+}
+
 /**
  **  Initialize routines 
  **/
